--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,17 @@ body {
     color: #4d4d4d;
     font-family: 'Balsamiq Sans', cursive;
 }
+#main_head {
+    background-image: url(../img/code_1.png);
+    background-size: 100%;
+    width: 80%;
+    margin:auto;
+    text-align: center;
+    font-size: 80px;
+    color: #ffffff;
+}
+#under-header {
+    font-size: 20px;
+    margin-left: 10%;
+    word-spacing: 50px;
+}
