--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #e4dede;
-    color: #4d4d4d;
+    background-color: #282c34;
+    color: #ffffff;
     font-family: 'Balsamiq Sans', cursive;
 }
-#main_head {
+.main_head {
     background-image: url(../img/code_1.png);
     background-size: 100%;
     width: 80%;
@@ -26,4 +26,8 @@ body {
     width: 100px;
     height: 100px;
     vertical-align: middle;
+}
+
+.text {
+    margin-left: 8em
 }
