--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
-
+@keyframes change {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
+}
 
 a {
     color: rgb(146, 145, 145);
@@ -19,9 +29,16 @@ a:hover {
 
 
 body {
-    background-color: #3d3f46;
+    background: linear-gradient(-45deg, #3d3f46, #46484f, #2d2f33, rgba(36, 33, 33, 0));
     color: #ffffff;
     font-family: 'Balsamiq Sans', cursive;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    background-size: 400% 400%;
+    position:relative;
+    animation: change 10s ease-in-out infinite;
 }
 .main_head {
     background-image: url(../img/code_1.png);
@@ -52,7 +69,7 @@ body {
 
 .text  {
     margin-left: 8em;
-    -webkit-text-stroke-width: 1.3px;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
 .text h1 {
