--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-@keyframes change {
+@keyframes background-anim {
     0% {
-        background-position: 0 50%;
+        background-position: 0, 50%;
     }
     50% {
-        background-position: 100% 50%;
+        background-position: 100%, 50%;
     }
     100% {
-        background-position: 0 50%;
+        background-position: 0%, 50%;
     }
 }
 
@@ -29,16 +29,11 @@ a:hover {
 
 
 body {
-    background: linear-gradient(-45deg, #3d3f46, #46484f, #2d2f33, rgba(36, 33, 33, 0));
+    background-image: linear-gradient(125deg,#1a1919,#757575, #343a47, #424344);
+    background-size: 400% 400%;
     color: #ffffff;
     font-family: 'Balsamiq Sans', cursive;
-    width: 100%;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    background-size: 400% 400%;
-    position:relative;
-    animation: change 10s ease-in-out infinite;
+    animation: background-anim, 15s, infinite;
 }
 .main_head {
     background-image: url(../img/code_1.png);
