--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@ a:hover {
 
 
 body {
-    background-image: linear-gradient(125deg,#1a1919,#757575, #343a47, #424344);
+    background-image: linear-gradient(125deg,#1a1919,#3d3d3d, #2f3238, #121416);
     background-size: 400% 400%;
     color: #ffffff;
     font-family: 'Balsamiq Sans', cursive;
-    animation: background-anim, 15s, infinite;
+    animation: background-anim 5s infinite, ease-in-out;
 }
 .main_head {
     background-image: url(../img/code_1.png);
