--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a:hover {
 
 
 body {
-    background-image: linear-gradient(125deg,#1a1919,#3d3d3d, #2f3238, #121416);
+    background-image: linear-gradient(125deg,#2c2c3a,#22222e, #212836, #2a2f35);
     background-size: 400% 400%;
     color: #ffffff;
     font-family: 'Balsamiq Sans', cursive;
