--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 .text  {
-    margin-left: 8em;
+    margin-left: 10%;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
